--- a/TaskProgramll/pom.xml
+++ b/TaskProgramll/pom.xml
@@ -30,6 +30,16 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.16.1</version>
         </dependency>
+        <dependency>
+          <groupId>com.github.sarxos</groupId>
+          <artifactId>webcam-capture</artifactId>
+          <version>0.3.12</version>
+        </dependency>
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-simple</artifactId>
+          <version>1.7.12</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
