--- a/TaskProgramll/pom.xml
+++ b/TaskProgramll/pom.xml
@@ -40,6 +40,21 @@
           <artifactId>slf4j-simple</artifactId>
           <version>1.7.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>kernel</artifactId>
+            <version>7.0.4</version>
+        </dependency>
+            <dependency>
+                <groupId>com.itextpdf</groupId>
+                <artifactId>io</artifactId>
+                <version>7.0.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.itextpdf</groupId>
+                <artifactId>layout</artifactId>
+                <version>7.0.4</version>
+            </dependency>
     </dependencies>
     <build>
         <plugins>
